# FBAEM

./: CMakeLists.txt  CMakeLists_cereal.txt.in  CMakeLists_enet.txt.in  LICENSE  README.md  run.sh
.run/: fbae  (BBOBB0-3).run.xml  fbae (BBOBB0-4).run.xml  fbae (BBOBB0-8).run.xml  fbae (BBOBB1-3).run.xml  fbae (BBOBB1-4).run.xml  fbae (BBOBB1-8).run.xml  fbae (BBOBB2-3).run.xml  fbae (BBOBB2-4).run.xml  fbae (BBOBB2-8).run.xml  fbae (BBOBB3).run.xml  fbae (BBOBB3-4) .run.xml  fbae (BBOBB3-8).run.xml  fbae (BBOBB4).run.xml  fbae (BBOBB4-8).run.xml  fbae (BBOBB5-8).run.xml  fbae (BBOBB6-8).run.xml  fbae (BBOBB7-8).run.xml  fbae (BBOBB8).run.xml
Resources/: sites.json  sites_3_local.json  sites_4_local.json  sites_8_local.json
SerializationOverhead/: CMakeLists.txt  mainSerializationOverhead.cpp
Sources/: AlgoLayer.cpp  AlgoLayer.h  CMakeLists.txt  CommLayer.cpp  CommLayer.h  EnetCommLayer.cpp  EnetCommLayer.h  EnetCommPeer.cpp  EnetCommPeer.h  Measures.cpp  Measures.h  Param.cpp  Param.h  SequencerAlgoLayer.cpp  SequencerAlgoLayer.h  SequencerAlgoLayerMsg.h  SessionLayer.cpp  SessionLayer.h  SessionLayerMsg.h  TcpCommLayer.cpp  TcpCommLayer.h  TcpCommPeer.cpp  TcpCommPeer.h  basicTypes.h  get_cpu_time.h  main.cpp  msgTemplates.h  options.cpp  options.h
Sources/AlgoLayer/: AlgoLayer.cpp  AlgoLayer.h
Sources/AlgoLayer/AllGathervAlgoLayer/: AllGathervAlgoLayer.cpp  AllGathervAlgoLayer.h  AllGathervAlgoLayerMsg.h
Sources/AlgoLayer/BBOBBAlgoLayer/: BBOBBAlgoLayer.cpp  BBOBBAlgoLayer.h  BBOBBAlgoLayerMsg.h
Sources/AlgoLayer/SequencerAlgoLayer/: SequencerAlgoLayer.cpp  SequencerAlgoLayer.h  SequencerAlgoLayerMsg.h
Sources/CommLayer/: CommLayer.h  CommPeer.h
Sources/CommLayer/EnetCommLayer/: EnetCommLayer.cpp  EnetCommLayer.h  EnetCommPeer.cpp  EnetCommPeer.h
Sources/CommLayer/TcpCommLayer/: TcpCommLayer.cpp  TcpCommLayer.h  TcpCommPeer.cpp  TcpCommPeer.h
Sources/SessionLayer/: SessionLayer.cpp  SessionLayer.h  SessionLayerMsg.h
Tools/: launch_fbae.py
